@@ -4,6 +4,7 @@
 - png save compression range was wrong
 - more/moreeq was wrong
 - vips7 ppm save with options was broken 
+- don't cache write operations
 
 18/6/12 started 7.28.9
 - slightly more memory debugging output
